# ines-2d

./: .clang-tidy  CMakeLists.txt  README.md
src/: main.cpp
src/machines/: goalie_stm.h  kicker_stm.h
src/machines/goalie/: goalie_stm.cpp  goalie_stm.h  goalie_stm_entry_points.h  goalie_stm_transitions.h
src/machines/kicker/: kicker_stm.cpp  kicker_stm.h  kicker_stm_entry_points.h  kicker_stm_transitions.h
